Accesibilité: Correction sur Contrast ratio button

--- a/style.css
+++ b/style.css
@@ -771,7 +771,6 @@ h4 {
 
 .btn-atomic-tangerine {
     background: #c55429;
-    color: #FFFFFF!important;
 }
 
 .btn-atomic-tangerine:hover {
